updated the dockerfie

--- a/react-app/Dockerfile
+++ b/react-app/Dockerfile
@@ -10,6 +10,7 @@ ENV PATH /app/node_modules/.bin:$PATH
 # install and cache app dependencies
 COPY package.json /app/package.json
 RUN npm install
+RUN npm install webpack@4.41.0
 RUN npm install react-scripts@3.01.1 -g --silent
 
 #start app
