--- a/react-app/Dockerfile
+++ b/react-app/Dockerfile
@@ -9,9 +9,12 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 # install and cache app dependencies
 COPY package.json /app/package.json
+COPY public /app/public
+COPY src /app/src
+RUN npm cache clean --force
+RUN npm install webpack@4.41.0 
+RUN npm install core-js@3
 RUN npm install
-RUN npm install webpack@4.41.0
-RUN npm install react-scripts@3.01.1 -g --silent
 
 #start app
 CMD ["npm", "start"]
